--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
+    "dotenv": "^16.4.1",
     "pinia": "^2.1.7",
     "sass": "^1.70.0",
     "vue": "^3.3.11",
