--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SERVICE_ID = service_2ebhax7
-TEMPLATE_ID = template_0rttn6e
-PUBLIC_KEY = XkNMkZdJ0QrfOEExo
+VUE_APP_SERVICE_ID = service_2ebhax7
+VUE_APP_TEMPLATE_ID = template_0rttn6e
+VUE_APP_PUBLIC_KEY = XkNMkZdJ0QrfOEExo
